
      HDFS-9373. Erasure coding: friendly log information for write operations
      with some failed streamers. (Li Bo via zhz)

      HDFS-9173. Erasure Coding: Lease recovery for striped file. (Walter Su and
      Jing Zhao via zhz)

      HDFS-9451. Clean up depreated umasks and related unit tests.
      (Wei-Chiu Chuang via wheat9)

Release 2.9.0 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HDFS-9267. TestDiskError should get stored replicas through
    FsDatasetTestUtils. (Lei (Eddy) Xu via Colin P. McCabe)

    HDFS-9491. Tests should get the number of pending async delets via
    FsDatasetTestUtils. (Tony Wu via lei)

    HDFS-9414. Refactor reconfiguration of ClientDatanodeProtocol for
    reusability. (Xiaobing Zhou via Arpit Agarwal)

    HDFS-8947. NameNode, DataNode and NFS gateway to support JvmPauseMonitor as
    a service. (Sunil G via Stevel)

    HDFS-9129. Move the safemode block count into BlockManager. (Mingliang Liu
    via jing9)

    HDFS-9281. Change TestDeleteBlockPool to not explicitly use File to check
    block pool existence. (lei)

    HDFS-9371. Code cleanup for DatanodeManager. (jing9)

    HDFS-9300. TestDirectoryScanner.testThrottle() is still a little flakey.
    (Daniel Templeton via wang)

    HDFS-8477. describe dfs.ha.zkfc.port in hdfs-default.xml.
    (Kanaka Kumar Avvaru via wang)

    HDFS-9350. Avoid creating temprorary strings in Block.toString() and
    getBlockName() (Staffan Friberg via cmccabe)

  OPTIMIZATIONS

  BUG FIXES

Release 2.8.0 - UNRELEASED

  NEW FEATURES

    HDFS-7891. A block placement policy with best rack failure tolerance.
    (Walter Su via szetszwo)

    HDFS-8131. Implement a space balanced block placement policy (Liu Shaohui
    via kihwal)

    HDFS-8155. Support OAuth2 in WebHDFS. (jghoman)

    HDFS-9184. Logging HDFS operation's caller context into audit logs.
    (Mingliang Liu via jitendra)

  IMPROVEMENTS
