@@ -4615,64 +4615,30 @@ index|]
 argument_list|)
 expr_stmt|;
 block|}
-name|int
+name|byte
 index|[]
 name|indices
 init|=
 literal|null
 decl_stmt|;
-specifier|final
-name|int
-name|indexCount
-init|=
-name|proto
-operator|.
-name|getBlockIndexCount
-argument_list|()
-decl_stmt|;
 if|if
 condition|(
-name|indexCount
-operator|>
-literal|0
+name|proto
+operator|.
+name|hasBlockIndices
+argument_list|()
 condition|)
 block|{
 name|indices
 operator|=
-operator|new
-name|int
-index|[
-name|indexCount
-index|]
-expr_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|indexCount
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|indices
-index|[
-name|i
-index|]
-operator|=
 name|proto
 operator|.
-name|getBlockIndex
-argument_list|(
-name|i
-argument_list|)
+name|getBlockIndices
+argument_list|()
+operator|.
+name|toByteArray
+argument_list|()
 expr_stmt|;
-block|}
 block|}
 comment|// Set values from the isCached list, re-using references from loc
 name|List
@@ -6746,7 +6712,7 @@ name|LocatedStripedBlock
 operator|)
 name|b
 decl_stmt|;
-name|int
+name|byte
 index|[]
 name|indices
 init|=
@@ -6755,6 +6721,18 @@ operator|.
 name|getBlockIndices
 argument_list|()
 decl_stmt|;
+name|builder
+operator|.
+name|setBlockIndices
+argument_list|(
+name|PBHelperClient
+operator|.
+name|getByteString
+argument_list|(
+name|indices
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|Token
 argument_list|<
 name|BlockTokenIdentifier
@@ -6784,16 +6762,6 @@ name|i
 operator|++
 control|)
 block|{
-name|builder
-operator|.
-name|addBlockIndex
-argument_list|(
-name|indices
-index|[
-name|i
-index|]
-argument_list|)
-expr_stmt|;
 name|builder
 operator|.
 name|addBlockTokens
