@@ -3346,9 +3346,11 @@ argument_list|)
 expr_stmt|;
 name|builder
 operator|.
-name|addAllBlockIndices
+name|setBlockIndices
 argument_list|(
-name|asList
+name|PBHelperClient
+operator|.
+name|getByteString
 argument_list|(
 name|sb
 operator|.
@@ -3458,64 +3460,24 @@ name|hasEcPolicy
 argument_list|()
 condition|)
 block|{
-name|List
-argument_list|<
-name|Integer
-argument_list|>
-name|BlockIndicesList
-init|=
+assert|assert
 name|b
 operator|.
-name|getBlockIndicesList
+name|hasBlockIndices
 argument_list|()
-decl_stmt|;
-name|int
+assert|;
+name|byte
 index|[]
 name|indices
 init|=
-operator|new
-name|int
-index|[
-name|BlockIndicesList
+name|b
 operator|.
-name|size
+name|getBlockIndices
 argument_list|()
-index|]
+operator|.
+name|toByteArray
+argument_list|()
 decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|BlockIndicesList
-operator|.
-name|size
-argument_list|()
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|indices
-index|[
-name|i
-index|]
-operator|=
-name|BlockIndicesList
-operator|.
-name|get
-argument_list|(
-name|i
-argument_list|)
-operator|.
-name|shortValue
-argument_list|()
-expr_stmt|;
-block|}
 name|rBlock
 operator|=
 operator|new
@@ -6226,104 +6188,6 @@ name|build
 argument_list|()
 return|;
 block|}
-DECL|method|asList (int[] arr)
-specifier|private
-specifier|static
-name|List
-argument_list|<
-name|Integer
-argument_list|>
-name|asList
-parameter_list|(
-name|int
-index|[]
-name|arr
-parameter_list|)
-block|{
-name|List
-argument_list|<
-name|Integer
-argument_list|>
-name|list
-init|=
-operator|new
-name|ArrayList
-argument_list|<>
-argument_list|(
-name|arr
-operator|.
-name|length
-argument_list|)
-decl_stmt|;
-for|for
-control|(
-name|int
-name|s
-range|:
-name|arr
-control|)
-block|{
-name|list
-operator|.
-name|add
-argument_list|(
-name|s
-argument_list|)
-expr_stmt|;
-block|}
-return|return
-name|list
-return|;
-block|}
-DECL|method|asList (short[] arr)
-specifier|private
-specifier|static
-name|List
-argument_list|<
-name|Integer
-argument_list|>
-name|asList
-parameter_list|(
-name|short
-index|[]
-name|arr
-parameter_list|)
-block|{
-name|List
-argument_list|<
-name|Integer
-argument_list|>
-name|list
-init|=
-operator|new
-name|ArrayList
-argument_list|<>
-argument_list|(
-name|arr
-operator|.
-name|length
-argument_list|)
-decl_stmt|;
-for|for
-control|(
-name|int
-name|s
-range|:
-name|arr
-control|)
-block|{
-name|list
-operator|.
-name|add
-argument_list|(
-name|s
-argument_list|)
-expr_stmt|;
-block|}
-return|return
-name|list
-return|;
-block|}
 DECL|method|convertStorageTypesProto ( StorageType[] targetStorageTypes)
 specifier|private
 specifier|static
@@ -6659,64 +6523,18 @@ name|size
 argument_list|()
 argument_list|)
 decl_stmt|;
-name|List
-argument_list|<
-name|Integer
-argument_list|>
-name|liveBlockIndicesList
-init|=
-name|blockEcRecoveryInfoProto
-operator|.
-name|getLiveBlockIndicesList
-argument_list|()
-decl_stmt|;
-name|short
+name|byte
 index|[]
 name|liveBlkIndices
 init|=
-operator|new
-name|short
-index|[
-name|liveBlockIndicesList
+name|blockEcRecoveryInfoProto
 operator|.
-name|size
+name|getLiveBlockIndices
 argument_list|()
-index|]
+operator|.
+name|toByteArray
+argument_list|()
 decl_stmt|;
-for|for
-control|(
-name|int
-name|i
-init|=
-literal|0
-init|;
-name|i
-operator|<
-name|liveBlockIndicesList
-operator|.
-name|size
-argument_list|()
-condition|;
-name|i
-operator|++
-control|)
-block|{
-name|liveBlkIndices
-index|[
-name|i
-index|]
-operator|=
-name|liveBlockIndicesList
-operator|.
-name|get
-argument_list|(
-name|i
-argument_list|)
-operator|.
-name|shortValue
-argument_list|()
-expr_stmt|;
-block|}
 name|ErasureCodingPolicy
 name|ecPolicy
 init|=
@@ -6861,7 +6679,7 @@ name|targetStorageTypes
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|short
+name|byte
 index|[]
 name|liveBlockIndices
 init|=
@@ -6872,9 +6690,11 @@ argument_list|()
 decl_stmt|;
 name|builder
 operator|.
-name|addAllLiveBlockIndices
+name|setLiveBlockIndices
 argument_list|(
-name|asList
+name|PBHelperClient
+operator|.
+name|getByteString
 argument_list|(
 name|liveBlockIndices
 argument_list|)
