@@ -3462,7 +3462,7 @@ argument_list|,
 operator|new
 name|ArrayList
 argument_list|<
-name|Short
+name|Byte
 argument_list|>
 argument_list|()
 argument_list|,
@@ -3507,7 +3507,7 @@ argument_list|,
 operator|new
 name|ArrayList
 argument_list|<
-name|Short
+name|Byte
 argument_list|>
 argument_list|()
 argument_list|,
@@ -3583,7 +3583,7 @@ argument_list|,
 operator|new
 name|ArrayList
 argument_list|<
-name|Short
+name|Byte
 argument_list|>
 argument_list|()
 argument_list|,
@@ -3731,7 +3731,7 @@ argument_list|,
 operator|new
 name|LinkedList
 argument_list|<
-name|Short
+name|Byte
 argument_list|>
 argument_list|()
 argument_list|,
@@ -3808,7 +3808,7 @@ argument_list|,
 operator|new
 name|LinkedList
 argument_list|<
-name|Short
+name|Byte
 argument_list|>
 argument_list|()
 argument_list|,
